# ForCrm

./: .env_example  Dockerfile  docker-compose.yml  pyproject.toml  req.txt
account/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
account/migrations/: 0001_initial.py  0002_remove_user_username.py  0003_alter_user_full_name.py  0004_alter_user_managers.py
apartaments/: admin.py  models.py  serializers.py  urls.py  views.py
apartaments/migrations/: 0001_initial.py  0002_alter_apartament_apartment_number.py
docker/nginx/: default_location
root/: settings.py  urls.py
